# sunsmart

./: .gitignore  app.py  models.py  pyproject.toml  requirements.txt  simulation_api.py
Draft/Draft/: app.py
Draft/Draft/instance/: sunsmart.db
Draft/Draft/static/css/: style.css
Draft/Draft/static/js/: history.js  main.js
Draft/Draft/templates/: index.html
attached_assets/: Pasted--Prompt-Build-a-Solar-Rooftop-Estimator-Web-App-SunSmart-Objective-Build-a-fully-client-side-1747397595374.txt  Pasted-Solar-Panels-Monocrystalline-Price-Range-GHS-500-00-100W-GHS-2-000-00-550W-Notes-Individ-1747438410063.txt
static/js/: main.js
templates/: estimator.html  history.html
